--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,23 @@
+[metadata]
+name = all_repos_readme
+version = 1.0
+description = A simple tool to add a generic README.md file to all of the user''s repos
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/uryyakir/all-repos-readme
+author = Uri Yakir
+author_email = uryyakir@gmail.com
+
+[options]
+packages = find:
+install_requires =
+    identify
+python_requires = >=3.6.1
+
+[options.entry_points]
+console_scripts =
+    all-repos-add-readme=all_repos_add_readme.main:main
+
 [mypy]
 check_untyped_defs = true
 disallow_any_generics = true
