--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,14 @@ author_email = uryyakir@gmail.com
 
 [options]
 packages = find:
+include_package_data = True
 install_requires =
     identify
 python_requires = >=3.6.1
+
+[options.packages.find]
+exclude =
+    *.tests
 
 [options.entry_points]
 console_scripts =
