--- a/tox.ini
+++ b/tox.ini
@@ -3,15 +3,11 @@ envlist = py36,py37,py38
 
 [testenv]
 deps = -rrequirements.txt
+passenv = *
 commands =
     coverage erase
-    coverage run -m pytest {posargs:tests}
+    coverage run -m pytest -v
     coverage report --fail-under 100
-
-[testenv:pre-commit]
-skip_install = true
-deps = pre-commit
-commands = pre-commit run --all-files --show-diff-on-failure
 
 [pep8]
 ignore = E501
