--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ console_scripts =
     all-repos-add-readme=all_repos_add_readme.main:main
 
 [mypy]
+exclude = venv/
 check_untyped_defs = true
 disallow_any_generics = true
 disallow_incomplete_defs = true
@@ -36,3 +37,6 @@ ignore_missing_imports = true
 [flake8]
 exclude = venv\
 ignore = E501
+
+[coverage:run]
+omit = venv/*
