--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py36,py37,py38
 
 [testenv]
-deps = -rrequirements.txt
+deps = -rall_repos_add_readme/requirements.txt
 passenv = *
 commands =
     coverage erase
