pre-commit linting

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ console_scripts =
     all-repos-add-readme=all_repos_add_readme.main:main
 
 [mypy]
-exclude = venv/
+exclude = venv/|.githooks/
 check_untyped_defs = true
 disallow_any_generics = true
 disallow_incomplete_defs = true
