--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,8 +4,7 @@ repos:
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
-    -   id: check-docstring-first
-    -   id: check-exectuables-have-shebang
+    -   id: check-executables-have-shebangs
     -   id: check-json
     -   id: check-shebang-scripts-are-executable
     -   id: mixed-line-ending
@@ -13,7 +12,6 @@ repos:
     -   id: check-yaml
     -   id: debug-statements
     -   id: double-quote-string-fixer
-    -   id: name-tests-test
     -   id: requirements-txt-fixer
 -   repo: https://github.com/PyCQA/flake8
     rev: 3.9.2
@@ -24,11 +22,6 @@ repos:
     rev: v1.5.7
     hooks:
     -   id: autopep8
--   repo: https://github.com/asottile/reorder_python_imports
-    rev: v2.6.0
-    hooks:
-    -   id: reorder-python-imports
-        args: [--py3-plus]
 -   repo: https://github.com/asottile/add-trailing-comma
     rev: v2.1.0
     hooks:
@@ -44,3 +37,4 @@ repos:
     hooks:
     -   id: mypy
         additional_dependencies: [types-all]
+        args: [--exclude '.githooks/']
