--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,8 +6,12 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-executables-have-shebangs
     -   id: check-json
-    -   id: check-shebang-scripts-are-executable
+    -   id: name-tests-test
+        args: ['--django']
+    # -   id: check-shebang-scripts-are-executable
     -   id: mixed-line-ending
+    -   id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
     -   id: requirements-txt-fixer
     -   id: check-yaml
     -   id: debug-statements
@@ -37,4 +41,3 @@ repos:
     hooks:
     -   id: mypy
         additional_dependencies: [types-all]
-        args: [--exclude '.githooks/']
