complying with mypy

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ console_scripts =
 
 [mypy]
 exclude = venv/
+	build/
 check_untyped_defs = true
 disallow_any_generics = true
 disallow_incomplete_defs = true
@@ -33,7 +34,7 @@ warn_unused_ignores = true
 ignore_missing_imports = true
 
 [flake8]
-exclude = venv\
+exclude = venv,build,.git,.coverage,.mypy_cache,.pytest_cache,.tox,__pycache__
 ignore = E501
 
 [coverage:run]
