applying black formatting

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ ignore_missing_imports = true
 
 [flake8]
 exclude = venv,build,.git,.coverage,.mypy_cache,.pytest_cache,.tox,__pycache__
-ignore = E501
+ignore = E501,W503
 
 [coverage:run]
 omit =
