--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,18 +14,19 @@ repos:
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
+        exclude: ^.*?.json$
     -   id: check-executables-have-shebangs
     -   id: check-json
     -   id: name-tests-test
         args: ['--django']
-    # -   id: check-shebang-scripts-are-executable
+    -   id: check-shebang-scripts-are-executable
     -   id: mixed-line-ending
     -   id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
     -   id: requirements-txt-fixer
     -   id: check-yaml
     -   id: debug-statements
-    -   id: double-quote-string-fixer
+#    -   id: double-quote-string-fixer
     -   id: requirements-txt-fixer
 -   repo: https://github.com/PyCQA/flake8
     rev: 4.0.1
